[gd_scene load_steps=6 format=2]

[ext_resource path="res://objects/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://objects/PlayerBullet.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=2]
radius = 8.0

[sub_resource type="CircleShape2D" id=1]
radius = 24.0

[node name="Player" instance=ExtResource( 1 )]
script = ExtResource( 2 )
PlayerBullet = ExtResource( 3 )

[node name="CollisionShape2D" parent="CollisionArea" index="0"]
shape = SubResource( 2 )

[node name="SkillArea" type="Area2D" parent="." index="3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SkillArea" index="0"]
shape = SubResource( 1 )

[node name="SkillTimer" type="Timer" parent="." index="4"]
[connection signal="use_skill" from="." to="." method="_on_Player_use_skill"]
[connection signal="area_entered" from="CollisionArea" to="." method="_on_CollisionArea_area_entered"]
[connection signal="body_entered" from="CollisionArea" to="." method="_on_CollisionArea_body_entered"]
[connection signal="area_entered" from="SkillArea" to="." method="_on_SkillArea_area_entered"]
[connection signal="timeout" from="SkillTimer" to="." method="_on_SkillTimer_timeout"]
